--- a/src/components/tickets/tickets.css
+++ b/src/components/tickets/tickets.css
@@ -8,3 +8,20 @@
     padding: 0.89rem;
     margin: .5rem;
 }
+.ticket__finish{
+    margin-left: auto;
+}
+.ticket__delete{
+    margin-left: auto;
+    background-color: lightcoral;
+}
+.ticket__footer{
+    display: flex;
+    padding: 1rem 0 0 0;
+    border-top: 1px dotted darkmagenta;
+    margin: 1rem 0 0 0;
+}
+.ticket__header{
+    font-size: large;
+    padding: 0 0 1rem 0;
+}
